Fix modal spacing
- Fix modal overflow containments
- Add modal element type export

--- a/src/runtime/partials/components/c-select/C-Select.scss
+++ b/src/runtime/partials/components/c-select/C-Select.scss
@@ -1,4 +1,4 @@
-$focus-outline-spacing: unitize(3px)!default;
+$focus-outline-spacing: unitize(3px) !default;
 
 .c-select {
   $module: &;
@@ -10,6 +10,7 @@ $focus-outline-spacing: unitize(3px)!default;
     user-select: none;
     margin-bottom: spacing('xxxs');
     @include font-style("form-label");
+
     span {
       font: inherit;
     }
@@ -22,6 +23,7 @@ $focus-outline-spacing: unitize(3px)!default;
     right: spacing('xs');
     transform: translate(0, -50%);
     transition: transition(transform);
+
     svg {
       display: block;
       opacity: .5;
@@ -37,8 +39,8 @@ $focus-outline-spacing: unitize(3px)!default;
     border-width: 1px;
     border-style: solid;
     border-radius: border-radius('xs');
-    outline-style: solid!important;
-    outline-width: unitize(1px)!important;
+    outline-style: solid !important;
+    outline-width: unitize(1px) !important;
     outline-offset: $focus-outline-spacing;
     outline-color: transparent;
     background: transparent;
@@ -49,13 +51,14 @@ $focus-outline-spacing: unitize(3px)!default;
 
     &--disabled {
       opacity: .5;
+
       .multiselect__placeholder {
         display: none
       }
     }
 
     &--active {
-      z-index: 50
+      z-index: 101
     }
 
     * {
@@ -72,7 +75,8 @@ $focus-outline-spacing: unitize(3px)!default;
       border-width: 0;
     }
 
-    &__input, &__single {
+    &__input,
+    &__single {
       display: block;
       width: calc(100% - #{spacing('xs')});
       margin: 0;
@@ -90,6 +94,7 @@ $focus-outline-spacing: unitize(3px)!default;
       padding: 0;
       opacity: .5;
       user-select: none;
+
       &:after {
         content: "\00a0";
         display: inline-block;
@@ -126,6 +131,7 @@ $focus-outline-spacing: unitize(3px)!default;
       overflow-y: scroll;
       -ms-overflow-style: none;
       scrollbar-width: none;
+
       &::-webkit-scrollbar {
         display: none;
       }
@@ -136,6 +142,7 @@ $focus-outline-spacing: unitize(3px)!default;
       width: 100%;
       padding: 0;
       transition: transition(color), transition(background-color);
+
       span {
         display: block;
         width: 100%;
@@ -147,7 +154,14 @@ $focus-outline-spacing: unitize(3px)!default;
         white-space: normal;
       }
 
-      &--highlight, &--selected, &:hover {
+      &--selected {
+        @include color-palette("select-interaction");
+        opacity: 0.6;
+        font-weight: 600;
+      }
+
+      &--highlight,
+      &:hover {
         @include color-palette("select-interaction");
       }
     }
@@ -166,6 +180,7 @@ $focus-outline-spacing: unitize(3px)!default;
     flex-grow: 0;
     width: 100%;
     @include font-style("form-label");
+
     span {
       font: inherit;
     }
